Fixed comments code and added tag routes
